# angler

./: .clang-format  .clang-tidy  .devcontainer.json  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  angler.repos  env.sh  requirements-build.txt  requirements-devel.txt  setup.cfg  sim.repos
.devcontainer/documentation/: Dockerfile  devcontainer.json
.devcontainer/nouveau/: Dockerfile  devcontainer.json
.devcontainer/nvidia/: Dockerfile  devcontainer.json
.devcontainer/robot/: Dockerfile  devcontainer.json
.devcontainer/xorg/: devcontainer.json
.docker/: Dockerfile  docker-bake.hcl  docker-compose.yaml  dos.Dockerfile  sim_entrypoint.sh
.docker/compose/: nouveau-desktop.yaml  nvidia-desktop.yaml  robot.yaml
.docker/entrypoints/: dev.sh  sim.sh
.github/ISSUE_TEMPLATE/: config.yaml  config.yml  documentation.yaml  feature-request.yaml
.github/workflows/: ci-docs.yaml  ci.yaml  docker.yaml  docs.yaml  format.yaml
angler_behaviors/: package.xml  setup.cfg  setup.py
angler_behaviors/behavior_tree/: tree.py
angler_behaviors/behavior_tree/behaviors/: cleanup.py  configure.py  mission.py  setup.py
angler_behaviors/behavior_tree/blocks/: arming.py  control.py  trajectory.py
angler_behaviors/behavior_tree/context/: __init__.py
angler_behaviors/behavior_tree/primitives/: arming.py  blackboard.py  control.py  gripper.py  planning.py  recording.py  service_clients.py
angler_behaviors/launch/: behavior_tree.launch.py
angler_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
angler_bringup/config/: angler.yaml
angler_bringup/launch/: angler.launch.py  bluerov2_heavy_alpha.launch.py  sitl.launch.py  static_tf_broadcasters.launch.py
angler_common/: package.xml  setup.cfg  setup.py
angler_common/angler_common/: conversions.py  time.py
angler_common/scripts/: reset_arm.sh
angler_control/: package.xml  setup.cfg  setup.py
angler_control/controllers/: controller.py
angler_control/controllers/robot_trajectory_controller/: base_multidof_joint_trajectory_controller.py  (+3 more)
angler_control/launch/: control.launch.py
angler_controllers/: package.xml  setup.cfg  setup.py
angler_controllers/launch/: control.launch.py
angler_controllers/test/: test_tasks.py
angler_description/: CMakeLists.txt  package.xml
angler_description/config/: angler.config.xacro  angler_controllers.yaml  dh.json  initial_positions.yaml  joy_teleop.yaml  localization.yaml  mavros.yaml  planning.yaml  tasks.yaml
angler_description/config/bluerov2_heavy_alpha/: ardusub.parm  controllers.yaml  localization.yaml  mux.yaml  planning.yaml  tasks.yaml
angler_description/config/joysticks/: logitech_f310.yaml
angler_description/gazebo/: angler.gazebo.xacro  ardupilot.gazebo.xacro  hydrodynamics.gazebo.xacro  materials.gazebo.xacro  ros2_control.gazebo.xacro  sensors.gazebo.xacro  thrusters.gazebo.xacro
angler_description/gazebo/worlds/: angler_underwater.world  bluerov2_heavy_alpha_underwater.world
angler_description/launch/: description.launch.py
angler_description/meshes/alpha5/: LICENSE  M2-1-1.stl  M2-1-3.stl  M2.stl  M3-INLINE.stl  RS1-100-101-123.stl
angler_description/meshes/alpha5/end_effectors/: RS1-124.stl  RS1-130.stl  RS1-139.stl
angler_description/ros2_control/: alpha.ros2_control.xacro
angler_description/rviz/: view_angler.rviz  view_bluerov2_heavy_alpha.rviz
angler_description/urdf/: alpha.ros2_control.xacro  alpha.urdf.xacro  angler.config.xacro  angler.gazebo.xacro  bluerov2_heavy.urdf.xacro  bluerov2_heavy_modified.urdf.xacro
angler_description/urdf/end_effectors/: standard_jaws.urdf.xacro
angler_description/xacro/bluerov2_heavy_alpha/: config.xacro  gazebo.xacro  ros2_control.xacro  urdf.xacro
angler_kinematics/: package.xml  setup.cfg  setup.py
angler_kinematics/angler_kinematics/: jacobian.py
angler_localization/: README.md  package.xml  setup.cfg  setup.py
angler_localization/angler_localization/: aruco_marker_detector.py  localizer.py  reference.py  source.py  video.py
angler_localization/launch/: aruco.launch.py  localization.launch.py  markers.launch.py
angler_msgs/: CMakeLists.txt  package.xml
angler_msgs/action/: GetPlan.action  PlanMission.action
angler_msgs/msg/: UvmsCmd.msg  UvmsState.msg  Waypoint.msg
angler_mux/: package.xml  setup.cfg  setup.py
angler_mux/angler_mux/: demux.py  mux.py
angler_mux/demux/: single_manipulator_demux.py
angler_mux/launch/: mux.launch.py
angler_mux/mux/: single_manipulator_mux.py
angler_planning/: package.xml  setup.cfg  setup.py
angler_planning/angler_planning/: mission_planner.py  waypoint_planner.py
angler_planning/angler_planning/missions/: loader.py  mission_library.py
angler_planning/launch/: planning.launch.py
angler_planning/mission_planning/: mission_planner.py
angler_planning/mission_planning/missions/: mission_library.py
angler_planning/planners/: base_planner.py
angler_planning/planners/trajectory_planners/end_effector_bezier_planner/: planner.py
angler_planning/planners/trajectory_planners/multidof_spline_trajectory_planner/: spline_planner.py
angler_planning/planners/waypoint_planners/preplanned_end_effector_planner/: planner.py
angler_planning/planners/waypoint_planners/preplanned_end_effector_planner/trajectories/: trajectory_library.py
angler_planning/test/: test_hierarchy.py  test_jacobian.py  test_mission_library.py
angler_planning/test/resources/: alpha.config.xacro  test_tasks.yaml
angler_planning/tpik/: constraint.py  constraints.py  controller.py  conversions.py  dh.py  hierarchy.py  jacobian.py  tasks.py
angler_planning/waypoint_planners/: base_planner.py
angler_planning/waypoint_planners/preplanned_end_effector_planner/: planner.py
angler_planning/waypoint_planners/preplanned_end_effector_planner/trajectories/: trajectory_library.py
angler_utils/: package.xml  setup.cfg  setup.py
angler_utils/angler_utils/: initial_position.py
angler_utils/scripts/: arm.sh  disarm.sh
docs/: docusaurus.config.js  package-lock.json
docs/docs/: contributing.mdx  installation.mdx  overview.mdx  welcome.mdx
(+14 files in other folders)
