<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>angler_behaviors</name>
  <version>0.0.1</version>
  <description>Behavior tree responsible for system autonomy.</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/evan-palmer/blue.git</url>
  <url type="bugtracker">https://github.com/evan-palmer/blue/issues</url>

  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
