<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>angler_bringup</name>
  <version>0.0.1</version>
  <description>Entrypoints for the Angler project</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/evan-palmer/blue.git</url>
  <url type="bugtracker">https://github.com/evan-palmer/blue/issues</url>

  <author>Evan Palmer</author>

  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_extras</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>hardware_interface</exec_depend>
  <!-- <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend condition="$GZ_VERSION == 'garden'">ros_gz_sim</exec_depend>
  <exec_depend>ros2controlcli</exec_depend> -->
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
