<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>angler_common</name>
  <version>0.0.1</version>
  <description>Collection of common utilities and nodes for Angler.</description>

  <maintainer email="evanp922@gmail.com">Evan Palmer</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/evan-palmer/angler.git</url>
  <url type="bugtracker">https://github.com/evan-palmer/angler/issues</url>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>joy_teleop</exec_depend>
  <exec_depend>joy_linux</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
